--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>More actions
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -409,114 +409,29 @@
 
       // Dummy data for the report form dropdowns (replace with actual data/API calls if needed)
       const reportFormDropdownData = {
+        brands: ["WOM Motor", "WOM Mobil", "WOM Property"],
+        errorSistems: ["Input Error", "System Down", "Data Mismatch", "Lain-lain"],
+        regions: ["Jawa Barat", "Jawa Tengah", "Jawa Timur", "Sumatera", "Kalimantan"],
         brands: ["Reguler", "MasKu", "MotorKu", "Mobilku"],
         errorSistems: ["KI", "MSS", "WISE", "Login"],
         regions: ["BANTEN", "JAWA BARAT", "JABODEBEK", "JATENGSEL", "JATIM BALI", "JATENGUT", "KALIMANTAN", "SULAWESI", "SUMBAGSEL", "SUMBAGUT"],
         cabangs: {
-          "BANTEN": [""Tangerang 1 Gading Serpong",
-    "Tangerang Selatan 3 Pondok Aren",
-    "Tangerang 4 Tigaraksa",
-    "Gudang Serang",
-    "BU BANTEN",
-    "Tangerang 2 Cisauk",
-    "Mauk",
-    "Ciputat",
-    "BALARAJA",
-    "Ciledug",
-    "Cikupa",
-    "Serang",
-    "Tangerang 5 Karawaci",
-    "Tangerang 6 Teluk Naga",
-    "Tangerang 7 Cipondoh",
-    "Parung - Tangerang Selatan 2 Pamulang",
-    "Tangerang Selatan 2 Pamulang",
-    "Khasanah BSD",
-    "Tangerang 3 Rajeg",
-    "Khasanah Map Center Ciputat",
-    "Gudang Pondok Pinang",
-    "Ciruas - Serang",
-    "Rangkasbitung"],
-          "JAWA BARAT": ["Jatibarang", "BU JaBar", "Bandung 3 Setiabudi", "Cirebon", "Purwakarta", "Tasikmalaya", "Kandanghaur - Jatibarang", "Bandung 1 Regol", "Bandung 4 Ujung Berung", "Sumedang", "Kuningan", "Cianjur", "Garut", "Bandung 2 Soreang", "Sukabumi", "CIMAHI", "Gudang Tasikmalaya", "Majalengka", "Ciamis-Tasikmalaya", "Gudang Sukabumi", "Gudang Bandung", "Gudang Jatibarang", "Gudang Purwakarta", "Gudang Sumedang", "Garut"],
+          "Jawa Barat": ["Tangerang 1 Gading Serpong", "Tangerang Selatan 3 Pondok Aren", "Tangerang 4 Tigaraksa", "Gudang Serang", "BU BANTEN", "Tangerang 2 Cisauk", "Mauk", "Ciputat", "BALARAJA", "Ciledug", "Cikupa", "Serang", "Tangerang 5 Karawaci", "Tangerang 6 Teluk Naga", "Tangerang 7 Cipondoh", "Parung - Tangerang Selatan 2 Pamulang", "Tangerang Selatan 2 Pamulang", "Khasanah BSD", "Tangerang 3 Rajeg", "Khasanah Map Center Ciputat", "Gudang Pondok Pinang", "Ciruas - Serang", "Rangkasbitung"],
+          "Jawa Tengah": ["Jatibarang", "BU JaBar", "Bandung 3 Setiabudi", "Cirebon", "Purwakarta", "Tasikmalaya", "Kandanghaur - Jatibarang", "Bandung 1 Regol", "Bandung 4 Ujung Berung", "Sumedang", "Kuningan", "Cianjur", "Garut", "Bandung 2 Soreang", "Sukabumi", "CIMAHI", "Gudang Tasikmalaya", "Majalengka", "Ciamis-Tasikmalaya", "Gudang Sukabumi", "Gudang Bandung", "Gudang Jatibarang", "Gudang Purwakarta", "Gudang Sumedang", "Garut"],
           "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", "Depok", "Cileungsi", "Joglo - Daan Mogot", "Jakarta Timur 1 Duren Sawit", "Jakarta Timur 2 Cipayung", "Bekasi 4 Jatiasih", "Bekasi 5 Harapan Indah", "Pancoran Mas - Depok", "Gudang Jakarta"],
-          "JATENGSEL": ["BU Jateng Selatan", "Cilacap 1 Cilacap Utara", "Solo", "Cilacap 2 Sidareja", "Banyumas 1 Ajibarang", "Magelang", "Kebumen 2 Gombong", "Klaten", "Yogyakarta", "Gunungkidul Wonosari", "Muntilan - Magelang", "Purwokerto", "Wonogiri", "Banjarnegara", "Purbalingga", "Boyolali", "Wonosobo", "Sleman", "Gudang Yogyakarta", "Cilacap 3 Majenang", "Purworejo", "Kebumen 1 Kebumen", "Sragen", "Gudang Purwokerto", "Gudang Cilacap", "Gudang Wonogiri", "Gudang Kebumen", "Gudang Wonosobo", "Gudang Solo", "Bantul", "Sukoharjo - Solo"],
-          "JATIM BALI": ["Gudang Madiun", "BU JATIM BNT", "Surabaya 2 Sukomanunggal", "Surabaya 1 Sukolilo", "Sidoarjo 2 Krian", "Surabaya 5 Rungkut", "Pasuruan", "Kediri", "Blitar", "Madiun", "Mataram", "Sidoarjo 1 Sidoarjo", "Ponorogo", "Malang 2 Kepanjen", "Malang 1 Blimbing", "Banyuwangi", "Ngawi", "Jombang", "Gresik", "Magetan", "Tulungagung", "Mojokerto 2 Mojosari", "Lamongan", "Bojonegoro", "Tabanan", "Tuban", "Denpasar", "Gudang Surabaya", "Gudang Malang", "Gudang Kediri", "Sidoarjo 3 Waru", "Nganjuk", "Mojokerto", "Gudang Jombang", "ROGOJAMPI", "Singosari - Malang 1 Blimbing", "Gudang Bojonegoro", "Surabaya 3 Wiyung", "Genteng", "Gudang Banyuwangi", "Tambaksari - Surabaya 1 Sukolilo", "Kertosono - Nganjuk", "Srengat - Blitar", "Kupang", "Caruban - Madiun", "Gudang Denpasar", "Gudang Mataram", "Gudang Pasuruan", "Gudang Mojokerto"],
-          "JATENGUT": [ "BU Jateng Utara", "Brebes 1 Wanasari", "Brebes 2 Bumiayu", "Pekalongan 1 Wiradesa", "Jepara", "Semarang 2 Ungaran Barat", "Tegal 2 Slawi", "Pemalang 2 Randudongkal", "Kudus", "Tegal 1 Dukuh Turi", "Pemalang 1 Pemalang", "Ngaliyan - Semarang 1 Semarang Selatan", "Semarang 1 Semarang Selatan", "Kendal", "Salatiga", "Purwodadi", "Gudang Semarang", "Gudang Tegal", "Gudang Kudus", "Gudang Pekalongan", "Pekalongan 2 Kajen", "Ambarawa - Semarang 2 Ungaran Barat", "Gudang Salatiga", "Purwodadi"],
-          "KALIMANTAN": ["BU Kalimantan",
-    "Samarinda",
-    "Balikpapan",
-    "Bontang",
-    "Banjarbaru",
-    "Pangkalan Bun",
-    "Paser",
-    "Banjarmasin",
-    "Berau",
-    "Tenggarong",
-    "Sampit",
-    "Palangkaraya",
-    "Gudang Samarinda",
-    "Gudang Banjarmasin",
-    "Gudang Berau"],
-          "SULAWESI": ["Mamuju", "BU SULAWESI", "Gowa", "Bulukumba", "Palu", "Gorontalo", "Makassar 1 Panakkukang", "Makassar 2 Biringkanaya", "Pare-Pare", "Airmadidi - Manado", "KENDARI", "Manado", "Palopo", "PINRANG", "Kotamobagu", "Bitung", "Pohuwato-Marisa", "Gudang Palopo", "Gudang Palu", "PANGKEP", "Gudang Makasar", "Gudang Pare-Pare", "Isimu - Gorontalo", "Gudang Gorontalo", "Bitung", "Kotamobagu"],
-          "SUMBAGSEL": ["BU SumbagSel",
-    "Tugu Mulyo",
-    "Pangkalpinang",
-    "Palembang 2 Bukit Lama",
-    "Tanjung Jabung Barat",
-    "Lampung 2 Pringsewu",
-    "Bengkulu",
-    "Jambi",
-    "Lampung Tengah",
-    "Lampung 1 Tanjung Karang Pusat",
-    "Tembesi",
-    "Palembang 1 Ilir Timur Satu",
-    "Kayu Agung",
-    "Baturaja",
-    "Prabumulih",
-    "Muara Enim",
-    "Lahat",
-    "Tebo",
-    "Kuala Tungkal",
-    "Metro",
-    "Lubuk Linggau",
-    "Betung",
-    "Jakabaring - Palembang",
-    "Jatiagung - Lampung",
-    "Musi Banyuasin",
-    "Gudang Jambi",
-    "Gudang Lampung",
-    "Gudang Palembang",
-    "Gudang Bengkulu",
-    "Gudang Prabumulih",
-    "Kuala Tungkal"],
-          "SUMBAGUT": ["Medan 2 Medan Selayang",
-    "Padang",
-    "Pekanbaru 1 Marpoyan Damai",
-    "Air Molek",
-    "Pematang Siantar",
-    "Karo",
-    "BU SumbagUt",
-    "Medan 1 Medan Timur",
-    "Binjai",
-    "Bagan Batu",
-    "Toba",
-    "Pekanbaru 2 Tenayan Raya",
-    "Duri",
-    "Batam",
-    "Langkat 1 Stabat",
-    "Kerinci",
-    "BATU AJI",
-    "Rantau Prapat",
-    "Lubuk Pakam",
-    "Tebing Tinggi",
-    "Langkat 2 Pangkalan Brandan",
-    "Gudang Medan",
-    "Dumai",
-    "Tanjung Pinang",
-    "Panam - Pekanbaru 1 Marpoyan Damai",
-    "Gudang Batam",
-    "Gudang Padang",
-    "Gudang Pekan Baru",
-    "Rantau Prapat"],
+          "Jawa Timur": ["Surabaya", "Malang", "Kediri"],
+          "Sumatera": ["Medan", "Palembang", "Padang"],
+          "Kalimantan": ["Pontianak", "Banjarmasin", "Samarinda"],
+          "BANTEN": ["Bandung", "Cirebon", "Bogor"],
+          "JAWA BARAT": ["Semarang", "Solo", "Yogyakarta"],
+          "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", ],
+          "JATENGSEL": ["Medan", "Palembang", "Padang"],
+          "JATIM BALI": ["Bandung", "Cirebon", "Bogor"],
+          "JATENGUT": ["Bandung", "Cirebon", "Bogor"],
+          "KALIMANTAN": ["Pontianak", "Banjarmasin", "Samarinda"],
+          "SULAWESI": ["Bandung", "Cirebon", "Bogor"],
+          "SUMBAGSEL": ["Bandung", "Cirebon", "Bogor"],
+          "SUMBAGUT": ["Bandung", "Cirebon", "Bogor"],
         },
       };
 
