--- a/index.html
+++ b/index.html
@@ -416,15 +416,14 @@
         errorSistems: ["KI", "MSS", "WISE", "Login"],
         regions: ["BANTEN", "JAWA BARAT", "JABODEBEK", "JATENGSEL", "JATIM BALI", "JATENGUT", "KALIMANTAN", "SULAWESI", "SUMBAGSEL", "SUMBAGUT"],
         cabangs: {
-          "Jawa Barat": ["Tangerang 1 Gading Serpong", "Tangerang Selatan 3 Pondok Aren", "Tangerang 4 Tigaraksa", "Gudang Serang", "BU BANTEN", "Tangerang 2 Cisauk", "Mauk", "Ciputat", "BALARAJA", "Ciledug", "Cikupa", "Serang", "Tangerang 5 Karawaci", "Tangerang 6 Teluk Naga", "Tangerang 7 Cipondoh", "Parung - Tangerang Selatan 2 Pamulang", "Tangerang Selatan 2 Pamulang", "Khasanah BSD", "Tangerang 3 Rajeg", "Khasanah Map Center Ciputat", "Gudang Pondok Pinang", "Ciruas - Serang", "Rangkasbitung"],
-          "Jawa Tengah": ["Jatibarang", "BU JaBar", "Bandung 3 Setiabudi", "Cirebon", "Purwakarta", "Tasikmalaya", "Kandanghaur - Jatibarang", "Bandung 1 Regol", "Bandung 4 Ujung Berung", "Sumedang", "Kuningan", "Cianjur", "Garut", "Bandung 2 Soreang", "Sukabumi", "CIMAHI", "Gudang Tasikmalaya", "Majalengka", "Ciamis-Tasikmalaya", "Gudang Sukabumi", "Gudang Bandung", "Gudang Jatibarang", "Gudang Purwakarta", "Gudang Sumedang", "Garut"],
-          "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", "Depok", "Cileungsi", "Joglo - Daan Mogot", "Jakarta Timur 1 Duren Sawit", "Jakarta Timur 2 Cipayung", "Bekasi 4 Jatiasih", "Bekasi 5 Harapan Indah", "Pancoran Mas - Depok", "Gudang Jakarta"],
+          "Jawa Barat": ["", "Cirebon", "Bogor"],
+          "Jawa Tengah": ["Semarang", "Solo", "Yogyakarta"],
           "Jawa Timur": ["Surabaya", "Malang", "Kediri"],
           "Sumatera": ["Medan", "Palembang", "Padang"],
           "Kalimantan": ["Pontianak", "Banjarmasin", "Samarinda"],
           "BANTEN": ["Bandung", "Cirebon", "Bogor"],
           "JAWA BARAT": ["Semarang", "Solo", "Yogyakarta"],
-          "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", ],
+          "JABODEBEK": ["BU JABODEBEK", "Jakarta Utara 2 Penjaringan", "Gudang Jati Asih", "Bekasi 1 Bekasi Barat", "Gudang Wanaherang", "Jakarta Pusat", "Jakarta Selatan 1 Pasar Minggu", "Bogor", "Cibinong", "Jakarta Selatan 2 Kebayoran Lama", "Karawang", "Bekasi 2 Tambun Selatan", "Jakarta Utara 1 Cilincing", "Leuwiliang", "Jakarta Barat 2 Kebon Jeruk", "Daan Mogot", "Cikarang", "Bogor 4 Jonggol", "Depok", "Cileungsi", "Joglo - Daan Mogot", "Jakarta Timur 1 Duren Sawit", "Jakarta Timur 2 Cipayung", "Bekasi 4 Jatiasih", "Bekasi 5 Harapan Indah", "Pancoran Mas - Depok", "Gudang Jakarta"],
           "JATENGSEL": ["Medan", "Palembang", "Padang"],
           "JATIM BALI": ["Bandung", "Cirebon", "Bogor"],
           "JATENGUT": ["Bandung", "Cirebon", "Bogor"],
