--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FAQ - WOM Finance</title>
-    <!-- Favicon -->
     <link rel="icon" href="wom-finance.jpg" type="image/png" />
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- SweetAlert CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.2/dist/sweetalert2.min.css"
       rel="stylesheet"
@@ -27,7 +24,6 @@
           <h5 class="mb-0 small">Pilih FAQ</h5>
         </div>
         <div class="card-body">
-          <!-- Button to trigger search modal -->
           <div class="mb-3 text-end">
             <button
               type="button"
@@ -105,18 +101,25 @@
                 </button>
               </div>
             </div>
-           <div id="googleFormLink" class="mt-3 d-none">
-            <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-            <button id="showFormBtn" class="btn btn-primary">Isi Form</button>
-           <div id="formContainer" class="mt-3"></div>
-          </div>
+            <div id="googleFormLink" class="mt-3 d-none">
+              <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
+              <button type="button" class="btn btn-primary" id="isiFormBtn">
+                Isi Form
+              </button>
+              <iframe
+                id="formIframe"
+                src=""
+                frameborder="0"
+                width="100%"
+                height="600px"
+                class="d-none mt-3"
+              ></iframe>
             </div>
           </form>
         </div>
       </div>
     </div>
 
-    <!-- Search Modal -->
     <div
       class="modal fade"
       id="searchModal"
@@ -181,7 +184,6 @@
               </div>
             </form>
             <div class="mt-4">
-              <!-- Table -->
               <div class="table-responsive">
                 <table class="table table-bordered table-striped table-hover">
                   <thead>
@@ -201,14 +203,12 @@
                 </table>
               </div>
 
-              <!-- Pagination Controls -->
               <nav aria-label="Table Pagination">
                 <ul
                   class="pagination justify-content-center"
                   id="paginationControls"
                 >
-                  <!-- Pagination buttons will be added dynamically -->
-                </ul>
+                  </ul>
               </nav>
             </div>
           </div>
@@ -216,7 +216,6 @@
       </div>
     </div>
 
-    <!-- Modal untuk menampilkan Solusi -->
     <div
       class="modal fade"
       id="solutionModal"
@@ -236,8 +235,7 @@
             ></button>
           </div>
           <div class="modal-body" id="solutionContent">
-            <!-- Solusi akan dimasukkan di sini -->
-          </div>
+            </div>
           <div class="modal-footer">
             <button
               type="button"
@@ -250,7 +248,7 @@
         </div>
       </div>
     </div>
-    
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -269,6 +267,8 @@
       const doneBtn = document.getElementById("doneBtn");
       const notDoneBtn = document.getElementById("notDoneBtn");
       const googleFormLink = document.getElementById("googleFormLink");
+      const isiFormBtn = document.getElementById("isiFormBtn"); // Get the new button
+      const formIframe = document.getElementById("formIframe"); // Get the iframe
       const searchResults = document.getElementById("searchResults");
       const paginationControls = document.getElementById("paginationControls");
 
@@ -282,22 +282,7 @@
           },
         });
       }
-      // Handle Show Form Button
-      document.getElementById("googleFormLink").addEventListener("click", function (e) {
-        if (e.target && e.target.id === "showFormBtn") {
-          const formContainer = document.getElementById("formContainer");
-          if (!formContainer.querySelector("iframe")) {
-            const iframe = document.createElement("iframe");
-            iframe.src = "form.html";
-            iframe.width = "100%";
-            iframe.style.height = "600px";
-            iframe.style.border = "1px solid #dee2e6";
-            iframe.style.background = "#fff";
-            formContainer.appendChild(iframe);
-          }
-          formContainer.scrollIntoView({ behavior: "smooth" });
-        }
-      });
+
       // Fungsi untuk menyembunyikan indikator loading dengan durasi tambahan
       function hideLoading(delay = 1000) {
         setTimeout(() => {
@@ -353,6 +338,7 @@
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -374,6 +360,7 @@
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
+        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Feature Change
@@ -386,6 +373,7 @@
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -408,6 +396,7 @@
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
+        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Kendala Change
@@ -417,6 +406,7 @@
           solusiTextarea.value = "";
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -431,11 +421,13 @@
         solusiTextarea.value = solusi || "";
         doneBtn.disabled = !solusi;
         notDoneBtn.disabled = !solusi;
+        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Done Button
       doneBtn.addEventListener("click", () => {
         googleFormLink.classList.add("d-none");
+        formIframe.classList.add("d-none"); // Ensure iframe is hidden on "Done"
         Swal.fire({
           icon: "success",
           title: "Berhasil",
@@ -446,11 +438,18 @@
       // Handle Not Done Button
       notDoneBtn.addEventListener("click", () => {
         googleFormLink.classList.remove("d-none");
+        // Do not automatically show the iframe here, wait for "Isi Form" click
         Swal.fire({
           icon: "info",
           title: "Belum Selesai",
           text: "Silakan isi Form untuk melaporkan kendala Anda.",
         });
+      });
+
+      // Handle "Isi Form" button click
+      isiFormBtn.addEventListener("click", () => {
+        formIframe.src = "form.html"; // Set the iframe source
+        formIframe.classList.remove("d-none"); // Make the iframe visible
       });
 
       // Function to display paginated results
@@ -470,10 +469,10 @@
           const row = document.createElement("tr");
 
           row.innerHTML = `
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
-    `;
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
+        `;
 
           // Add click event for modal
           row.querySelectorAll("td").forEach((cell) => {
@@ -584,7 +583,7 @@
               )) &&
             (searchKendala === "" ||
               item.Kendala.toLowerCase().includes(searchKendala.toLowerCase()))
-            //    &&
+            //  &&
             // (searchSolusi === "" ||
             //   item.Solusi.toLowerCase().includes(searchSolusi.toLowerCase()))
           );
