--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
                 </button>
               </div>
             </div>
-            <div id="googleFormLink" class="mt-3 d-none">
-              <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-              <button type="button" class="btn btn-primary" id="isiFormBtn">
+           <div id="googleFormLink" class="mt-3 d-none">
+            <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdOd_49wUJN2lg84FFXCzX65srOq8H4q6nfOPXIt9hV6Lye0Q/viewform?usp=header" target="_blank" class="btn btn-primary">Isi Form</a>
+          </div>
                 Isi Form
               </button>
               <iframe
