--- a/form.html
+++ b/form.html
@@ -185,7 +185,7 @@
                 <input
                   type="file"
                   id="fileUpload"
-                  name="entry.YOUR_GOOGLE_FORM_ENTRY_ID_FOR_FILE_UPLOAD"
+                  name="https://docs.google.com/forms/d/e/1FAIpQLSdOd_49wUJN2lg84FFXCzX65srOq8H4q6nfOPXIt9hV6Lye0Q/viewform?usp=header"
                   class="form-control form-control-sm"
                   accept="image/*,video/*"
                   multiple
