--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </button>
               </div>
             </div>
-         <div id="googleFormLink" class="mt-3 d-none">Add commentMore actions
+             <div id="googleFormLink" class="mt-3 d-none">
               <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
               <button type="button" class="btn btn-primary" id="isiFormBtn">
                 Isi Form
