--- a/form.html
+++ b/form.html
@@ -563,7 +563,7 @@ document.getElementById("faqForm").addEventListener("submit", function(e) {
           formData.append("brand", brand);
 
           try {
-            const response = await fetch("AKfycby7EzS_v8XLMsNwtzSXi-GLu4RZl1j1Vln4jJH4TqwXMrQbJupAo2bK-1KRTHBjh-d3AA", {
+            const response = await fetch("https://script.google.com/a/macros/wom.co.id/s/AKfycbzBsqzHK8cgySmpaZtk0FUv5uPLZq8o1sawDTEwctjkzXast2tk0BafNGSEefaRUcL95A/exec", {
               method: "POST",
               body: formData
             });
@@ -619,7 +619,7 @@ document.getElementById("faqForm").addEventListener("submit", function(e) {
         // Show loading
         showLoading("Mengirim form...");
 
-        fetch("AKfycby7EzS_v8XLMsNwtzSXi-GLu4RZl1j1Vln4jJH4TqwXMrQbJupAo2bK-1KRTHBjh-d3AA", {
+        fetch("https://script.google.com/a/macros/wom.co.id/s/AKfycbzBsqzHK8cgySmpaZtk0FUv5uPLZq8o1sawDTEwctjkzXast2tk0BafNGSEefaRUcL95A/exec", {
           method: "POST",
           body: formData
         })
