--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FAQ - WOM Finance</title>
-     <link rel="icon" href="wom-finance.jpg" type="image/png" />
+    <!-- Favicon -->
+    <link rel="icon" href="wom-finance.jpg" type="image/png" />
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- SweetAlert CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.2/dist/sweetalert2.min.css"
       rel="stylesheet"
@@ -22,8 +25,9 @@
       <div class="card shadow-sm">
         <div class="card-header bg-primary text-white">
           <h5 class="mb-0 small">Pilih FAQ</h5>
-          </div>
+        </div>
         <div class="card-body">
+          <!-- Button to trigger search modal -->
           <div class="mb-3 text-end">
             <button
               type="button"
@@ -77,7 +81,7 @@
                 rows="5"
                 readonly
               ></textarea>
-              </div>
+            </div>
             <div class="mb-3">
               <label class="form-label small text-muted"
                 >Apakah solusi sudah berhasil?</label
@@ -88,7 +92,7 @@
                   class="btn btn-success me-2"
                   id="doneBtn"
                   disabled
-                   >
+                >
                   Done
                 </button>
                 <button
@@ -96,30 +100,23 @@
                   class="btn btn-danger"
                   id="notDoneBtn"
                   disabled
-                   >
+                >
                   Not Done
                 </button>
-                </div>
-            </div>
-             <div id="googleFormLink" class="mt-3 d-none">
-              <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-              <button type="button" class="btn btn-primary" id="isiFormBtn">
-                Isi Form
-              </button>
-              <iframe
-                id="formIframe"
-                src=""
-                frameborder="0"
-                width="100%"
-                height="600px"
-                class="d-none mt-3"
-              ></iframe>
               </div>
+            </div>
+            <div id="googleFormLink" class="mt-3 d-none">
+              <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
+              <a href="form.html" target="_blank" class="btn btn-primary"
+                >Isi Form</a
+              >
+            </div>
           </form>
         </div>
       </div>
     </div>
 
+    <!-- Search Modal -->
     <div
       class="modal fade"
       id="searchModal"
@@ -169,21 +166,22 @@
                     placeholder="Cari Kendala"
                   />
                 </div>
-                </div>
+              </div>
               <div class="mt-3 text-end">
                 <button
                   type="button"
                   id="clearBtn"
                   class="btn btn-secondary me-2"
-                   >
+                >
                   Clear
                 </button>
                 <button type="button" id="searchBtn" class="btn btn-primary">
                   Cari
                 </button>
-                </div>
+              </div>
             </form>
             <div class="mt-4">
+              <!-- Table -->
               <div class="table-responsive">
                 <table class="table table-bordered table-striped table-hover">
                   <thead>
@@ -201,21 +199,24 @@
                     </tr>
                   </tbody>
                 </table>
-                </div>
-                
+              </div>
+
+              <!-- Pagination Controls -->
               <nav aria-label="Table Pagination">
                 <ul
                   class="pagination justify-content-center"
                   id="paginationControls"
-                    >
-                  </ul>
+                >
+                  <!-- Pagination buttons will be added dynamically -->
+                </ul>
               </nav>
-              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
+    <!-- Modal untuk menampilkan Solusi -->
     <div
       class="modal fade"
       id="solutionModal"
@@ -235,7 +236,8 @@
             ></button>
           </div>
           <div class="modal-body" id="solutionContent">
-             </div>
+            <!-- Solusi akan dimasukkan di sini -->
+          </div>
           <div class="modal-footer">
             <button
               type="button"
@@ -249,7 +251,7 @@
       </div>
     </div>
 
-     <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
@@ -267,8 +269,6 @@
       const doneBtn = document.getElementById("doneBtn");
       const notDoneBtn = document.getElementById("notDoneBtn");
       const googleFormLink = document.getElementById("googleFormLink");
-      const isiFormBtn = document.getElementById("isiFormBtn"); // Get the new button
-      const formIframe = document.getElementById("formIframe"); // Get the iframe
       const searchResults = document.getElementById("searchResults");
       const paginationControls = document.getElementById("paginationControls");
 
@@ -338,7 +338,6 @@
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
-          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -360,7 +359,6 @@
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
-        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Feature Change
@@ -373,7 +371,6 @@
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
-          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -396,7 +393,6 @@
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
-        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Kendala Change
@@ -406,7 +402,6 @@
           solusiTextarea.value = "";
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
-          formIframe.classList.add("d-none"); // Hide iframe
           return;
         }
 
@@ -421,13 +416,11 @@
         solusiTextarea.value = solusi || "";
         doneBtn.disabled = !solusi;
         notDoneBtn.disabled = !solusi;
-        formIframe.classList.add("d-none"); // Hide iframe
       }
 
       // Handle Done Button
       doneBtn.addEventListener("click", () => {
         googleFormLink.classList.add("d-none");
-        formIframe.classList.add("d-none"); // Ensure iframe is hidden on "Done"
         Swal.fire({
           icon: "success",
           title: "Berhasil",
@@ -438,18 +431,11 @@
       // Handle Not Done Button
       notDoneBtn.addEventListener("click", () => {
         googleFormLink.classList.remove("d-none");
-        // Do not automatically show the iframe here, wait for "Isi Form" click
         Swal.fire({
           icon: "info",
           title: "Belum Selesai",
           text: "Silakan isi Form untuk melaporkan kendala Anda.",
         });
-      });
-
-      // Handle "Isi Form" button click
-      isiFormBtn.addEventListener("click", () => {
-        formIframe.src = "form.html"; // Set the iframe source
-        formIframe.classList.remove("d-none"); // Make the iframe visible
       });
 
       // Function to display paginated results
@@ -469,17 +455,17 @@
           const row = document.createElement("tr");
 
           row.innerHTML = `
-          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
-          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
-          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
-        `;
+      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
+      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
+      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
+    `;
 
           // Add click event for modal
           row.querySelectorAll("td").forEach((cell) => {
             cell.addEventListener("click", () =>
               showSolutionModal(item.Solusi)
             );
-              });
+          });
 
           searchResults.appendChild(row);
         });
@@ -501,7 +487,7 @@
           if (currentPage > 1) {
             currentPage--;
             updatePagination(results);
-             }
+          }
         });
         paginationControls.appendChild(prevButton);
 
@@ -516,7 +502,7 @@
             updatePagination(results);
           });
           paginationControls.appendChild(pageItem);
-           }
+        }
 
         // Next Button
         const nextButton = document.createElement("li");
@@ -571,7 +557,7 @@
           return;
         }
 
-           showLoading("Mencari data...");
+        showLoading("Mencari data...");
 
         const results = faqData.filter((item) => {
           return (
@@ -583,11 +569,11 @@
               )) &&
             (searchKendala === "" ||
               item.Kendala.toLowerCase().includes(searchKendala.toLowerCase()))
-            //  &&
+            //    &&
             // (searchSolusi === "" ||
             //   item.Solusi.toLowerCase().includes(searchSolusi.toLowerCase()))
           );
-           });
+        });
 
         hideLoading(1500); // Tambahkan durasi tambahan
         currentPage = 1; // Reset to first page for new search
@@ -618,7 +604,7 @@
           '<tr><td colspan="3" class="text-center small">Tidak ada hasil.</td></tr>';
 
         paginationControls.innerHTML = "";
-          });
-       </script>
+      });
+    </script>
   </body>
 </html>
