--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>FAQ - WOM Finance</title>
-    <!-- Favicon -->
     <link rel="icon" href="wom-finance.jpg" type="image/png" />
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hWW+ALEwIH"
       crossorigin="anonymous"
     />
-    <!-- SweetAlert CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.2/dist/sweetalert2.min.css"
       rel="stylesheet"
     />
+    <style>
+      /* Optional: untuk memastikan iframe memiliki tinggi yang cukup */
+      .form-iframe-container {
+        border: 1px solid #dee2e6; /* Border untuk visualisasi container */
+        border-radius: 0.375rem; /* Match Bootstrap card-body border-radius */
+        overflow: hidden; /* Sembunyikan scrollbar jika tidak diperlukan di luar iframe */
+        height: 600px; /* Tinggi default untuk iframe, sesuaikan jika perlu */
+        transition: height 0.3s ease-in-out; /* Animasi saat tinggi berubah */
+      }
+      .form-iframe-container iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    </style>
   </head>
   <body class="bg-light">
     <div class="container py-3">
@@ -27,7 +39,6 @@
           <h5 class="mb-0 small">Pilih FAQ</h5>
         </div>
         <div class="card-body">
-          <!-- Button to trigger search modal -->
           <div class="mb-3 text-end">
             <button
               type="button"
@@ -107,16 +118,17 @@
             </div>
             <div id="googleFormLink" class="mt-3 d-none">
               <p>Silakan isi Form untuk melaporkan kendala Anda:</p>
-              <a href="form.html" target="_blank" class="btn btn-primary"
-                >Isi Form</a
-              >
+              <button type="button" class="btn btn-primary" id="loadFormBtn">
+                Isi Form
+              </button>
             </div>
           </form>
+          <div id="formIframeContainer" class="form-iframe-container mt-3 d-none">
+            </div>
         </div>
       </div>
     </div>
 
-    <!-- Search Modal -->
     <div
       class="modal fade"
       id="searchModal"
@@ -149,7 +161,9 @@
                   />
                 </div>
                 <div class="col-md-3">
-                  <label for="searchFeature" class="form-label">Feature</label>
+                  <label for="searchFeature" class="form-label"
+                    >Feature</label
+                  >
                   <input
                     type="text"
                     id="searchFeature"
@@ -158,7 +172,9 @@
                   />
                 </div>
                 <div class="col-md-3">
-                  <label for="searchKendala" class="form-label">Kendala</label>
+                  <label for="searchKendala" class="form-label"
+                    >Kendala</label
+                  >
                   <input
                     type="text"
                     id="searchKendala"
@@ -181,7 +197,6 @@
               </div>
             </form>
             <div class="mt-4">
-              <!-- Table -->
               <div class="table-responsive">
                 <table class="table table-bordered table-striped table-hover">
                   <thead>
@@ -201,14 +216,12 @@
                 </table>
               </div>
 
-              <!-- Pagination Controls -->
               <nav aria-label="Table Pagination">
                 <ul
                   class="pagination justify-content-center"
                   id="paginationControls"
                 >
-                  <!-- Pagination buttons will be added dynamically -->
-                </ul>
+                  </ul>
               </nav>
             </div>
           </div>
@@ -216,7 +229,6 @@
       </div>
     </div>
 
-    <!-- Modal untuk menampilkan Solusi -->
     <div
       class="modal fade"
       id="solutionModal"
@@ -236,8 +248,7 @@
             ></button>
           </div>
           <div class="modal-body" id="solutionContent">
-            <!-- Solusi akan dimasukkan di sini -->
-          </div>
+            </div>
           <div class="modal-footer">
             <button
               type="button"
@@ -268,7 +279,9 @@
       const solusiTextarea = document.getElementById("solusi");
       const doneBtn = document.getElementById("doneBtn");
       const notDoneBtn = document.getElementById("notDoneBtn");
-      const googleFormLink = document.getElementById("googleFormLink");
+      const googleFormLinkDiv = document.getElementById("googleFormLink"); // Ubah nama variabel
+      const loadFormBtn = document.getElementById("loadFormBtn"); // Tombol baru
+      const formIframeContainer = document.getElementById("formIframeContainer"); // Container iframe
       const searchResults = document.getElementById("searchResults");
       const paginationControls = document.getElementById("paginationControls");
 
@@ -309,8 +322,10 @@
 
       // Populate dropdown with unique values
       function populateDropdown(selectElement, values) {
-        selectElement.innerHTML =
-          '<option value="" class="small text-muted">-- Pilih Sistem --</option>';
+        // Cek apakah selectElement adalah 'sistemSelect' untuk mengubah teks default
+        const defaultOptionText = selectElement === sistemSelect ? "-- Pilih Sistem --" : "-- Pilih " + selectElement.id.charAt(0).toUpperCase() + selectElement.id.slice(1) + " --";
+
+        selectElement.innerHTML = `<option value="" class="small text-muted">${defaultOptionText}</option>`;
         values.forEach((value) => {
           const option = document.createElement("option");
           option.value = value;
@@ -327,17 +342,20 @@
 
       // Handle Sistem Change
       function handleSistemChange() {
+        // Sembunyikan iframe form saat dropdown berubah
+        formIframeContainer.classList.add("d-none");
+        formIframeContainer.innerHTML = ""; // Kosongkan iframe
+
         if (!sistemSelect.value) {
           // Reset semua dropdown dan textarea jika Sistem tidak dipilih
-          featureSelect.innerHTML =
-            '<option value="" class="small text-muted">-- Pilih Feature --</option>';
-          kendalaSelect.innerHTML =
-            '<option value="" class="small text-muted">-- Pilih Kendala --</option>';
+          populateDropdown(featureSelect, []); // Mengosongkan Feature
+          populateDropdown(kendalaSelect, []); // Mengosongkan Kendala
           solusiTextarea.value = "";
           featureSelect.disabled = true;
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          googleFormLinkDiv.classList.add("d-none"); // Sembunyikan kembali link form
           return;
         }
 
@@ -353,24 +371,28 @@
         populateDropdown(featureSelect, filteredFeatures);
 
         // Reset Kendala dan Solusi
-        kendalaSelect.innerHTML =
-          '<option value="" class="small text-muted">-- Pilih Kendala --</option>';
+        populateDropdown(kendalaSelect, []); // Mengosongkan Kendala
         kendalaSelect.disabled = true;
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
+        googleFormLinkDiv.classList.add("d-none"); // Sembunyikan kembali link form
       }
 
       // Handle Feature Change
       function handleFeatureChange() {
+        // Sembunyikan iframe form saat dropdown berubah
+        formIframeContainer.classList.add("d-none");
+        formIframeContainer.innerHTML = ""; // Kosongkan iframe
+
         if (!featureSelect.value) {
           // Reset dropdown Kendala dan Solusi jika Feature tidak dipilih
-          kendalaSelect.innerHTML =
-            '<option value="" class="small text-muted">-- Pilih Kendala --</option>';
+          populateDropdown(kendalaSelect, []); // Mengosongkan Kendala
           solusiTextarea.value = "";
           kendalaSelect.disabled = true;
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          googleFormLinkDiv.classList.add("d-none"); // Sembunyikan kembali link form
           return;
         }
 
@@ -393,15 +415,21 @@
         solusiTextarea.value = "";
         doneBtn.disabled = true;
         notDoneBtn.disabled = true;
+        googleFormLinkDiv.classList.add("d-none"); // Sembunyikan kembali link form
       }
 
       // Handle Kendala Change
       function handleKendalaChange() {
+        // Sembunyikan iframe form saat dropdown berubah
+        formIframeContainer.classList.add("d-none");
+        formIframeContainer.innerHTML = ""; // Kosongkan iframe
+
         if (!kendalaSelect.value) {
           // Reset Solusi jika Kendala tidak dipilih
           solusiTextarea.value = "";
           doneBtn.disabled = true;
           notDoneBtn.disabled = true;
+          googleFormLinkDiv.classList.add("d-none"); // Sembunyikan kembali link form
           return;
         }
 
@@ -416,11 +444,14 @@
         solusiTextarea.value = solusi || "";
         doneBtn.disabled = !solusi;
         notDoneBtn.disabled = !solusi;
+        googleFormLinkDiv.classList.add("d-none"); // Pastikan link form tersembunyi secara default
       }
 
       // Handle Done Button
       doneBtn.addEventListener("click", () => {
-        googleFormLink.classList.add("d-none");
+        googleFormLinkDiv.classList.add("d-none");
+        formIframeContainer.classList.add("d-none"); // Sembunyikan iframe jika terlihat
+        formIframeContainer.innerHTML = ""; // Kosongkan iframe
         Swal.fire({
           icon: "success",
           title: "Berhasil",
@@ -430,12 +461,37 @@
 
       // Handle Not Done Button
       notDoneBtn.addEventListener("click", () => {
-        googleFormLink.classList.remove("d-none");
+        googleFormLinkDiv.classList.remove("d-none"); // Tampilkan tombol "Isi Form"
         Swal.fire({
           icon: "info",
           title: "Belum Selesai",
           text: "Silakan isi Form untuk melaporkan kendala Anda.",
         });
+      });
+
+      // Event listener untuk tombol "Isi Form"
+      loadFormBtn.addEventListener("click", () => {
+        // Tampilkan loading SweetAlert
+        showLoading("Memuat formulir...");
+
+        // Kosongkan container dan buat iframe baru
+        formIframeContainer.innerHTML = '';
+        const iframe = document.createElement('iframe');
+        iframe.src = 'form.html'; // Path ke form.html
+        iframe.title = 'Form Laporan Kendala';
+
+        // Event listener saat iframe selesai dimuat
+        iframe.onload = () => {
+            hideLoading(); // Sembunyikan loading setelah iframe dimuat
+            formIframeContainer.classList.remove('d-none'); // Tampilkan container iframe
+        };
+
+        iframe.onerror = () => {
+            hideLoading();
+            Swal.fire('Error', 'Gagal memuat formulir. Silakan coba lagi.', 'error');
+        };
+
+        formIframeContainer.appendChild(iframe);
       });
 
       // Function to display paginated results
@@ -455,10 +511,10 @@
           const row = document.createElement("tr");
 
           row.innerHTML = `
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
-      <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
-    `;
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Sistem">${item.Sistem}</td>
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Feature">${item.Feature}</td>
+          <td class="text-wrap small text-muted" style="max-width: 150px; cursor: pointer;" data-column="Kendala">${item.Kendala}</td>
+        `;
 
           // Add click event for modal
           row.querySelectorAll("td").forEach((cell) => {
@@ -569,9 +625,6 @@
               )) &&
             (searchKendala === "" ||
               item.Kendala.toLowerCase().includes(searchKendala.toLowerCase()))
-            //    &&
-            // (searchSolusi === "" ||
-            //   item.Solusi.toLowerCase().includes(searchSolusi.toLowerCase()))
           );
         });
 
